--- a/vecinalnorteIII/blog/templates/index.html
+++ b/vecinalnorteIII/blog/templates/index.html
@@ -44,16 +44,16 @@
     	</div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	    <div class="container d-flex align-items-center">
-	    	<a class="navbar-brand" href="index.html">Jardín Vecinal Norte III</a>
+	    	<a class="navbar-brand" href="/home"><img src='https://vecinalnorte3.sfo2.digitaloceanspaces.com/logo+iconojardin.png'  width="300"></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	        	<li class="nav-item active"><a href="index.html" class="nav-link pl-0">Inicio</a></li>
-	        	<li class="nav-item"><a href="about.html" class="nav-link">Nuestro Jardín</a></li>
-	        	<li class="nav-item"><a href="teacher.html" class="nav-link">Familinea</a></li>
-	        	<li class="nav-item"><a href="courses.html" class="nav-link">Recursos Pedagógicos</a></li>
+	        	<li class="nav-item active"><a href="" class="nav-link pl-0">Inicio</a></li>
+	        	<li class="nav-item"><a href="nuestrojardin" class="nav-link">Nuestro Jardín</a></li>
+	        	<li class="nav-item"><a href="familinea" class="nav-link">Familinea</a></li>
+	        	<li class="nav-item"><a href="recursos" class="nav-link">Recursos Pedagógicos</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -61,7 +61,7 @@
     <!-- END nav -->
     
     <section class="home-slider owl-carousel">
-      <div class="slider-item" style="background-image:url({%static "images/Nuestros_jardines.jpg"%});">
+      <div class="slider-item" style="background-image:url(https://vecinalnorte3.sfo2.digitaloceanspaces.com/images/indexjardin.png);">
       	<div class="overlay"></div>
         <div class="container">
           <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
@@ -132,13 +132,13 @@
               </div>
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Nuestros Valores:</h3>
-                <h3><ul>
-						<li>Respeto</li>
-						<li>Buen humor</li>
-						<li>Colaboración</li>
-				   </ul>
-				</h3>
-				<p><a href="#" class="btn btn-secondary px-4 py-3 mt-3">Conozca nuestros valores</a></p>
+				<br><br>
+                <p>Respeto<p>
+				<p>Buen Humor<p>
+				<p>Dolaboración<p>
+				<br>
+						
+				<p><a href="/nuestrojardin" class="btn btn-secondary px-4 py-3 mt-3">Conozca nuestros valores</a></p>
               </div>
             </div>      
           </div>
@@ -160,37 +160,15 @@
 				</div>
 			</div>
 		</section>
+	<section class="ftco-section contact-section">
+		<a class="navbar-brand" href="http://www.fonoinfancia.cl/"><img src='https://vecinalnorte3.sfo2.digitaloceanspaces.com/images/fonoinfancia.jpeg'  width="500"></a>
+
+		<a class="navbar-brand" href="https://www.integra.cl/"><img src='https://vecinalnorte3.sfo2.digitaloceanspaces.com/images/WhatsApp%20Image%202020-05-12%20at%2018.20.49.jpeg'  width="550"></a>
+		<a class="navbar-brand" href="https://parvularia.mineduc.cl/"><img src='https://vecinalnorte3.sfo2.digitaloceanspaces.com/images/WhatsApp%20Image%202020-05-12%20at%2018.24.23.jpeg'  width="200"></a>
+	
+	</section>
 
 
-
-		<section class="ftco-gallery">
-    	<div class="container-wrap">
-    		<div class="row no-gutters">
-					<div class="col-md-3 ftco-animate">
-						<a href="images/image_1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url({%static "images/course-1.jpg"%});">
-							
-						</a>
-					</div>
-					<div class="col-md-3 ftco-animate">
-						<a href="images/image_2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url({%static "images/image_2.jpg"%});">
-							
-						</a>
-					</div>
-					<div class="col-md-3 ftco-animate">
-						<a href="images/image_3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url({%static "images/image_3.jpg"%});">
-							
-						</a>
-					</div>
-					<div class="col-md-3 ftco-animate">
-						<a href="images/image_4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url({%static "images/image_4.jpg"%});">
-							
-						</a>
-					</div>
-        </div>
-    	</div>
-    </section>
-
-		
     <footer class="ftco-footer ftco-bg-dark ftco-section">
       <div class="container">
         <div class="row mb-5">
@@ -208,6 +186,7 @@
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://www.linkedin.com/in/macarena-rebolledo-a53155a8/" target="_blank">@mojonapower </a>
+
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
@@ -238,8 +217,6 @@
     
   </body>
 
-
-	</body>
 
 </html>
 
