--- a/vecinalnorteIII/blog/templates/base.html
+++ b/vecinalnorteIII/blog/templates/base.html
@@ -50,7 +50,7 @@
 	      </button>
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	        	<li class="nav-item active"><a href="/home" class="nav-link pl-0">Inicio</a></li>
+	        	<li class="nav-item active"><a href=" " class="nav-link pl-0">Inicio</a></li>
 	        	<li class="nav-item"><a href="/nuestrojardin" class="nav-link">Nuestro Jardín</a></li>
 	        	<li class="nav-item"><a href="/familinea" class="nav-link">Familinea</a></li>
 	        	<li class="nav-item"><a href="/recursos" class="nav-link">Recursos Pedagógicos</a></li>
